<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.main.MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/size_8dp"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="@dimen/size_8dp"
                app:cardElevation="@dimen/size_4dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/size_8dp">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/inputSearchPhotos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:padding="@dimen/size_5dp"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            app:boxBackgroundMode="none"
                            app:boxCollapsedPaddingTop="@dimen/size_0dp"
                            app:hintAnimationEnabled="false"
                            app:hintEnabled="false"
                            app:endIconMode="clear_text"
                            app:startIconDrawable="@drawable/ic_baseline_search_24"
                            app:startIconTint="@color/grey">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtSearchPhotos"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:hint="@string/hint_ip_address"
                                android:imeOptions="actionSearch"
                                android:inputType="text"
                                android:lines="1"
                                android:padding="@dimen/size_10dp"
                                android:textColorHint="@color/grey" />

                        </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_search"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/inputSearchPhotos"
                        android:text="@string/btn_txt_search" />
                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_search"
                android:layout_margin="@dimen/size_8dp"
                app:cardPreventCornerOverlap="true"
                app:cardCornerRadius="@dimen/size_8dp"
                app:cardElevation="@dimen/size_4dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.fragment.app.FragmentContainerView
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/size_250dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/size_8dp"
                        android:orientation="vertical">
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/ip_address"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_ip"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:layout_alignParentBottom="true"
                                android:background="@color/grey" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/version"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/city"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_city"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/region"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_region"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/country"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_country"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/latitude"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_latitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/longitude"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_longitude"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/as_number"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_asnumber"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="@dimen/size_1dp"
                                android:background="@color/grey"
                                android:layout_alignParentBottom="true"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/size_40dp"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true">
                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/organization"
                                android:layout_alignParentStart="true"
                                android:layout_centerInParent="true"/>

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_organization"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_centerInParent="true" />
                        </RelativeLayout>
                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/data_source"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/card_content"
                android:gravity="center"/>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>